--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -29,11 +29,7 @@ scrape_configs:
       - targets: ["localhost:9090"]
 
   - job_name: "expense"
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
-    static_configs:
-      - targets: ["172.31.24.77:9100", "172.31.19.36:9100", "172.31.25.106:9100" ]
-
+    ec2_sd_configs:
+      - region: us-east-1
+        port: 9100
 
