--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -3,6 +3,11 @@
     src: prometheus.yml
     dest: /opt/prometheus/prometheus.yml
 
+- name: Copy Prometheus Configuration - Record file
+  ansible.builtin.template:
+    src: record.yml
+    dest: /opt/prometheus/record.yml
+
 - name: Restart Prometheus
   ansible.builtin.systemd:
     name: prometheus
