--- a/roles/prometheus/templates/alertmanager.yml
+++ b/roles/prometheus/templates/alertmanager.yml
@@ -3,7 +3,7 @@ route:
   group_wait: 30s
   group_interval: 5m
   repeat_interval: 1h
-  receiver: 'web.hook'
+  receiver: 'email'
 
 receivers:
   - name: "email"
@@ -14,9 +14,4 @@ receivers:
         auth_username: {{ lookup('aws_ssm', 'prometheus.email.username', region='us-east-1' ) }}
         auth_password: {{ lookup('aws_ssm', 'prometheus.email.password', region='us-east-1' ) }}
         require_tls: true
-
-inhibit_rules:
-  - source_match:
-      severity: 'critical'
-    equal: ['alertname', 'dev', 'instance']
 
