--- a/jenksins-ip-dns-update.yml
+++ b/jenksins-ip-dns-update.yml
@@ -1,13 +1,23 @@
 - name: Update Jenkins IP in Route53
   hosts: localhost
   tasks:
-    - name: Update Jenkins IP
-      amazon.aws.route53:
-        state: present
-        zone: rdevopsb73.online
-        record: jenkins.rdevopsb73.online
-        type: A
-        ttl: 10
-        value: 44.211.38.210
-        wait: true
+#    - name: Update Jenkins IP
+#      amazon.aws.route53:
+#        state: present
+#        zone: rdevopsb73.online
+#        record: jenkins.rdevopsb73.online
+#        type: A
+#        ttl: 10
+#        value: 44.211.38.210
+#        wait: true
+
+    - name: List all EIP addresses for a VM.
+      amazon.aws.ec2_eip_info:
+        filters:
+           instance-id: i-0d03910b43af7e01c
+      register: out
+
+    - name: print
+      debug:
+        msg: "{{out}}"
 
