--- a/jenksins-ip-dns-update.yml
+++ b/jenksins-ip-dns-update.yml
@@ -13,6 +13,7 @@
 
     - name: List all EIP addresses for a VM.
       amazon.aws.ec2_eip_info:
+        region: us-east-1
         filters:
            instance-id: i-0d03910b43af7e01c
       register: out
