--- a/jenksins-ip-dns-update.yml
+++ b/jenksins-ip-dns-update.yml
@@ -14,8 +14,8 @@
     - name: List all EIP addresses for a VM.
       amazon.aws.ec2_instance_info::
         region: us-east-1
-        filters:
-           instance-id: i-0d03910b43af7e01c
+        instance_ids:
+              - i-0d03910b43af7e01c
       register: out
 
     - name: print
