--- a/roles/common/tasks/app_prereq.yml
+++ b/roles/common/tasks/app_prereq.yml
@@ -16,6 +16,6 @@
 
 - name: Download backend Code and Extract it
   ansible.builtin.unarchive:
-    src: http://admin:Admin123artifactory.rdevopsb73.online:8081/artifactory/{{ component }}/{{ component }}-{{ lookup('aws_ssm', '{{env}}.{{component}}.app_version', region='us-east-1' ) }}.zip
+    src: http://admin:Admin123@artifactory.rdevopsb73.online:8081/artifactory/{{ component }}/{{ component }}-{{ lookup('aws_ssm', '{{env}}.{{component}}.app_version', region='us-east-1' ) }}.zip
     dest: "{{ app_loc }}"
     remote_src: yes
