--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -29,10 +29,10 @@
     name: common
     tasks_from: app_prereq
 
-- name: Install NodeJS dependencies
-  ansible.builtin.shell: npm install
-  args:
-    chdir: /app
+#- name: Install NodeJS dependencies
+#  ansible.builtin.shell: npm install
+#  args:
+#    chdir: /app
 
 - name: Install MySQL Client
   ansible.builtin.dnf:
